feat: add Java example